no longer architectury TODO: neoforge runClient and runServer are broken