@@ -1,66 +1,63 @@
 plugins {
-    id 'com.gradleup.shadow'
+    id 'fabric-loom' version "${fabric_loom_version}"
 }
 
-architectury {
-    platformSetupLoomIde()
-    fabric()
-}
+base.setArchivesName("${mod_id}-fabric-${mod_version}+${minecraft_version}")
+test.enabled = false
 
-configurations {
-    common {
-        canBeResolved = true
-        canBeConsumed = false
-    }
-    compileClasspath.extendsFrom common
-    runtimeClasspath.extendsFrom common
-    developmentFabric.extendsFrom common
-
-    // Files in this configuration will be bundled into your mod using the Shadow plugin.
-    // Don't use the `shadow` configuration from the plugin itself as it's meant for excluding files.
-    shadowBundle {
-        canBeResolved = true
-        canBeConsumed = false
-    }
+java {
+    withSourcesJar()
+    toolchain.languageVersion = JavaLanguageVersion.of(21)
 }
 
 dependencies {
-    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
+    minecraft "com.mojang:minecraft:${minecraft_version}"
+    mappings loom.layered() {
+        officialMojangMappings()
+        parchment("org.parchmentmc.data:parchment-${parchment_minecraft_version}:${parchment_mappings_version}@zip")
+    }
 
-    // Fabric API. This is technically optional, but you probably want it anyway.
-    modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
+    modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
-    // Architectury API. This is optional, and you can comment it out if you don't need it.
-    // modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
+    compileOnly project(':common')
+}
 
-    common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
-    shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
+tasks.withType(JavaCompile).configureEach {
+    source(project(':common').sourceSets.main.allSource) // 将:common的源代码加入编译
+}
+
+jar.doLast {
+    rootProject.removePreview archiveFile.get().asFile
+}
+
+test {
+    enabled = false
 }
 
 processResources {
-    var replaceProperties = [minecraft_version      : minecraft_version,
-                             minecraft_version_range: minecraft_version_range,
-                             neo_version            : neoforge_version,
-                             neo_version_range      : neo_version_range,
-                             loader_version_range   : loader_version_range,
-                             mod_id                 : mod_id,
-                             mod_name               : mod_name,
-                             mod_license            : mod_license,
-                             mod_version            : mod_version,
-                             mod_authors            : mod_authors,
-                             mod_description        : mod_description,
-                             fabric_loader_version  : fabric_loader_version]
-    inputs.properties replaceProperties
-    filesMatching('fabric.mod.json') {
-        expand replaceProperties
+    filesMatching("fabric.mod.json") {
+        expand project.properties
     }
+    from project(':common').sourceSets.main.resources
 }
 
-shadowJar {
-    configurations = [project.configurations.shadowBundle]
-    archiveClassifier = 'dev-shadow'
-}
+loom {
+    runs {
+        named("client"){
+            client()
+            ideConfigGenerated(true)
+            configName("Fabric Client")
+            runDir("run")
+            vmArgs('--enable-preview')
+        }
 
-remapJar {
-    inputFile.set shadowJar.archiveFile
+        named("server"){
+            server()
+            ideConfigGenerated(true)
+            configName("Fabric Server")
+            runDir("run")
+            vmArgs('--enable-preview')
+        }
+    }
 }
