@@ -1,69 +1,48 @@
 plugins {
-    id 'com.gradleup.shadow'
+    id 'net.neoforged.gradle.userdev' version '7.1.20'
 }
 
-architectury {
-    platformSetupLoomIde()
-    neoForge()
-}
+base.setArchivesName("${mod_id}-neoforge-${mod_version}+${minecraft_version}")
+test.enabled = false
 
-configurations {
-    common {
-        canBeResolved = true
-        canBeConsumed = false
-    }
-    compileClasspath.extendsFrom common
-    runtimeClasspath.extendsFrom common
-    developmentNeoForge.extendsFrom common
-
-    // Files in this configuration will be bundled into your mod using the Shadow plugin.
-    // Don't use the `shadow` configuration from the plugin itself as it's meant for excluding files.
-    shadowBundle {
-        canBeResolved = true
-        canBeConsumed = false
-    }
-}
-
-repositories {
-    maven {
-        name = 'NeoForged'
-        url = 'https://maven.neoforged.net/releases'
-    }
+java {
+    withSourcesJar()
+    toolchain.languageVersion = JavaLanguageVersion.of(21)
 }
 
 dependencies {
-    neoForge "net.neoforged:neoforge:$rootProject.neoforge_version"
+    implementation "net.neoforged:neoforge:${neoforge_version}"
 
-    // Architectury API. This is optional, and you can comment it out if you don't need it.
-    // modImplementation "dev.architectury:architectury-neoforge:$rootProject.architectury_api_version"
+    compileOnly project(':common')
+}
 
-    common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
-    shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
+tasks.withType(JavaCompile).configureEach {
+    source(project(':common').sourceSets.main.allSource) // 将:common的源代码加入编译
+}
+
+jar.doLast {
+    rootProject.removePreview archiveFile.get().asFile
 }
 
 processResources {
-    var replaceProperties = [minecraft_version      : minecraft_version,
-                             minecraft_version_range: minecraft_version_range,
-                             neo_version            : neoforge_version,
-                             neo_version_range      : neo_version_range,
-                             loader_version_range   : loader_version_range,
-                             mod_id                 : mod_id,
-                             mod_name               : mod_name,
-                             mod_license            : mod_license,
-                             mod_version            : mod_version,
-                             mod_authors            : mod_authors,
-                             mod_description        : mod_description]
-    inputs.properties replaceProperties
     filesMatching('META-INF/neoforge.mods.toml') {
-        expand replaceProperties
+        expand project.properties
     }
+    from project(':common').sourceSets.main.resources
 }
 
-shadowJar {
-    configurations = [project.configurations.shadowBundle]
-    archiveClassifier = 'dev-shadow'
-}
+runs {
+    configureEach {
+        modSource project.sourceSets.main
+    }
 
-remapJar {
-    inputFile.set shadowJar.archiveFile
+    client {
+        systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
+        arguments '--enable-preview', '--enable-native-access=ALL-UNNAMED'
+    }
+
+    server {
+        systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
+        arguments '--nogui','--enable-preview', '--enable-native-access=ALL-UNNAMED'
+    }
 }
